# fitscube

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
fitscube/: __init__.py  asyncio.py  bounding_box.py  combine_fits.py  combine_stokes.py  exceptions.py  extract.py  fitscube.py  logging.py  stokescube.py
tests/: conftest.py  test_bb.py  test_extract.py  test_frequencies.py  test_times.py
