[tool.poetry]
name = "fitscube"
version = "0.1.0"
description = ""
authors = ["Thomson, Alec (S&A, Kensington) <AlecThomson@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
